kubernetes/base/foobar/foobar-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foobar-api
  namespace: foobar
  labels:
    app.kubernetes.io/name: foobar-api
    app.kubernetes.io/instance: foobar-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: foobar
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: foobar-api
      app.kubernetes.io/instance: foobar-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: foobar-api
        app.kubernetes.io/instance: foobar-api
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: foobar
        app.kubernetes.io/managed-by: flux
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: foobar-api
          image: ghcr.io/barolab/foobar-api:main
          ports:
            - name: https
              protocol: TCP
              containerPort: 80

          resources:
            requests:
              memory: 32Mi
              cpu: 100m
            limits:
              memory: 32Mi
              cpu: 100m

          readinessProbe:
            tcpSocket:
              port: 80
          livenessProbe:
            tcpSocket:
              port: 80

          volumeMounts:
            - name: cert
              mountPath: /cert
              readOnly: true

      volumes:
        - name: cert
          persistentVolumeClaim:
            claimName: foobar-api-cert
