kubernetes/base/foobar/foobar-api/statfulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: foobar-api
  namespace: foobar
  labels:
    app.kubernetes.io/name: foobar-api
    app.kubernetes.io/instance: foobar-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: foobar
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 2
  serviceName: foobar-api
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: foobar-api
      app.kubernetes.io/instance: foobar-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: foobar-api
        app.kubernetes.io/instance: foobar-api
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: foobar
        app.kubernetes.io/managed-by: flux
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: foobar-api
          image: ghcr.io/barolab/foobar-api:0.1.2
          ports:
            - name: https
              protocol: TCP
              containerPort: 80

          resources:
            requests:
              memory: 32Mi
              cpu: 100m
            limits:
              memory: 32Mi
              cpu: 100m

          readinessProbe:
            tcpSocket:
              port: 80

          livenessProbe:
            tcpSocket:
              port: 80

          volumeMounts:
            - name: tls-cache
              mountPath: /cert
              readOnly: true

      volumes:
        - name: tls-certs
          secret:
            secretName: foobar-api-server

  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: tls-cache
      spec:
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
