kubernetes/base/foobar/foobar-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foobar-api
  namespace: foobar
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
  labels:
    app.kubernetes.io/name: foobar-api
    app.kubernetes.io/instance: foobar-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: foobar
    app.kubernetes.io/managed-by: flux
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/name: foobar-api
    app.kubernetes.io/instance: foobar-api
