kubernetes/base/foobar/foobar-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foobar-api
  namespace: foobar
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/name: foobar-api
    app.kubernetes.io/instance: foobar-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: foobar
    app.kubernetes.io/managed-by: flux
spec:
  ingressClassName: traefik-proxy
  rules:
  - host: api.raimon.dev
    http:
      paths:
      - path: /foobar
        pathType: Prefix
        backend:
          service:
            name: foobar-api
            port:
              name: https

  tls:
    - secretName: foobar-api-tls
      hosts:
        - api.raimon.dev
